fix(ui): adjust z-index on summary popup

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -4852,7 +4852,7 @@ td.inlineList li:not(:last-child):after {
 .contentTooltip.show, .contentTooltip.visible {
     display: flex !important;
     opacity: 1;
-    z-index: 4;
+    z-index: 9999;
     transition: opacity .4s ease-out;
 }
 
